# grippers_ur_ros2

./: .gitignore  README.md
gripper_interfaces/: CMakeLists.txt  package.xml
gripper_interfaces/srv/: Gripper.srv
gripper_robotiq_2f85/: README.md  package.xml  setup.cfg  setup.py
gripper_robotiq_2f85/gripper_robotiq_2f85/: __init__.py  robotiq_2f85.py
gripper_soft_mgrip_p2/: README.md  package.xml  setup.cfg  setup.py
gripper_soft_mgrip_p2/gripper_soft_mgrip_p2/: mgrip_p2.py
gripper_soft_mgrip_p2/ur_scripts/: close.script  open.script
