<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_robotiq_2f85</name>
  <version>1.0.0</version>
  <description>Service server to control the Robotiq 2F-85 gripper</description>
  <maintainer email="enrico.saccon@unitn.it">Enrico Saccon</maintainer>
  <license>Apache 2.0</license>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <depend>gripper_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
